fix: align title icons

--- a/assets/scss/alod-components/layouts/_layout-object-details.scss
+++ b/assets/scss/alod-components/layouts/_layout-object-details.scss
@@ -125,7 +125,7 @@
     color: $theme-dark-grey;
 
     img {
-      widows: 18px; height: 18px;
+      width: 18px; height: 18px;
       margin: 6px;
     }
 
