--- a/assets/scss/swiss-components/layouts/_layout-object-details.scss
+++ b/assets/scss/swiss-components/layouts/_layout-object-details.scss
@@ -109,7 +109,7 @@
     font-size: 0.8em;
 
     img {
-      widows: 18px; height: 18px;
+      width: 18px; height: 18px;
       margin: 6px;
     }
 
